# Teste-Logspace

./: README.md  pyproject.toml
teste_logspace/: .env  main.py  models.py
